# linetracer-counter

./: .dockerignore  .gitignore  README.md
.devcontainer/: devcontainer.json
client/: .gitignore  .prettierignore  .prettierrc.json  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/docs/: selector-guideline.md
client/scripts/: mock-ws.ts
client/src/: App.tsx  README.md
client/src/app/: README.md  index.css  index.tsx
client/src/app/providers/: admin-competition-provider.tsx  admin-division-provider.tsx  admin-participant-provider.tsx  admin-record-provider.tsx  admin-user-provider.tsx  app-providers.tsx  auth-provider.tsx  competition-provider.tsx  compose-providers.tsx  counter-provider.tsx  csv-provider.tsx  division-provider.tsx  error-handling-provider.tsx  fetcher-provider.tsx  manual-record-provider.tsx  participant-provider.tsx  progress-provider.tsx  record-control-provider.tsx  record-provider.tsx  repository-provider.tsx  timer-control-provicer.tsx  (+3 more)
client/src/entities/: README.md
client/src/features/: README.md
client/src/pages/: README.md  TEMPLATE.md  index.ts
client/src/shared/: README.md  index.ts
client/src/widgets/: README.md
counters/rpi-counter-sensor/: CMakeLists.txt  README.md  config.example.json  rpi-counter-sensor.service
counters/rpi-counter-sensor/src/: bpw34_sensor_data_reader.cpp  bpw34_sensor_data_reader.hpp  config.cpp  config.hpp  http_curl_client.cpp  http_curl_client.hpp  http_sensor_data_sender.cpp  http_sensor_data_sender.hpp  interfaces.hpp  logger.cpp  logger.hpp  main.cpp  precision_timer.hpp  thread_safe_queue.hpp
deployment/zetin-server/: Dockerfile  deploy  docker-compose.yaml
deployments/zetin-server/: Dockerfile  docker-compose.yaml
docs/: competition-bulk-upload.md  counter-web-overview.md  domain-models.md  forgot-admin-credentials.md  manual-record-setup.md  setup-counter-hw.md  use-cases.md  using-member-uos-wifi.md
docs/assets/domain-models/: domain-models.drawio
server/: .gitignore  jest.config.ts  package-lock.json  package.json  tsconfig.json
server/docs/: counter-architecture.md  socket-event.md
server/docs/assets/: counter-architecture-diagram.drawio
server/scripts/: simulate-counter.ts
server/src/: container.ts  env.ts  index.ts
server/src/core/: errors.ts  interfaces.ts  models.ts  repositories.ts  services.ts
server/src/http/: app.module.ts  bootstrap.ts  exception.filter.ts
server/src/repositories/: actor-id-pw-sqlite.ts  actor-sqlite.ts  competition-sqlite.ts  division-sqlite.ts  manual-record-sqlite.ts  participant-sqlite.ts  timer-log-sqlite.ts
server/src/scripts/: create-admin.ts  simulate-counter.ts
server/src/services/: actor-session-random.ts  actor.ts  competition.ts  manual-record.ts  record.ts  timer-log.ts
server/src/utils/: sqlite.ts
(+480 files in other folders)
